Changes for Java 17